# zconf changelog

v0.7.5-dev
 [build 820]
 - on load, if the zconf::path dir didnt exist, it created the neccassary dirs
   and not also creates the regset db for public reg

v0.7.4
 - added 'access' command
 - added helpful access info to approve command
 - added 'pwdgen' command to generate random password of default length
 - added 'listusers' admin command
 - changed MSG->zncresponce:* to MSGM->znccheck

v0.7.3
 - changed user bans to account freeze
 - freeze accounts (previously ban) now only blocks users from logging in.
 - added purge command for admins to delete account
 - fixed freeze system

v0.7.2
 - Fixed admin listing