@@ -1,12 +1,12 @@
 # zConf ZNC User Management system
-# v0.7.3
+# v0.7.5-dev
 
 For support, visit #znc on irc.rueven.online
 
 # requirements
  - eggdrop
  `- Tested on 1.8.0 RC-1, but should work fine on 1.6.21
- - ZNC Admin Acount with module controlpanel loaded
+ - ZNC Admin Acount with modules controlpanel and blockuser loaded
  `- Account should be named zconf
 
 ## commands
@@ -27,7 +27,7 @@ Command   | Effect
 ----------|-------
 freeze    | Freeze an account
 restore   | Unfreeze an account
-purge     | Delete an account
+purge     | Delete an account -- DISABLED
 listusers | list all users on znc
 pubreg    | manage public registration on/off
 admin     | manage the zConf admins
